# projectHelper

./: .gitignore  CMakeLists.txt  LICENSE  README.md  powershell_setup.ps1  projectHelper.cpp  projectHelper.h
